--- a/src/components/useDragModal/index.less
+++ b/src/components/useDragModal/index.less
@@ -12,14 +12,19 @@
   top: 0;
   left: 0;
   z-index: 2000;
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
   .cv-drag-modal {
     background-color: #fff;
     border-radius: 2px;
-    box-shadow: 0 0 2px 1px #f0f0f0;
+    // box-shadow: 0 0 2px 1px #f0f0f0;
     width: 300px;
     position: absolute;
     pointer-events: visible;
     z-index: 2001;
+    border: 1px solid #f0f0f0;
+    transition: 1s;
     .cv-drag-moda-close {
       position: absolute;
       right: 16px;
@@ -39,15 +44,29 @@
       font-weight: bold;
       color: rgba(0, 0, 0, 0.85);
       letter-spacing: 2px;
-      padding: 16px;
+      padding: 12px 8px;
       border-bottom: 1px solid #f0f0f0;
     }
     .cv-drag-modal-body {
-      padding: 16px;
+      padding: 8px;
+      max-height: 500px;
+      overflow-y: scroll;
     }
     .cv-drag-modal-footer {
       border: 0;
       border-top: 1px solid #f0f0f0;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      z-index: 2002;
+    }
+    .cv-drag-modal-orgin-footer {
+      font-size: 14px;
+      font-weight: 200;
+      padding: 8px 16px;
+      display: flex;
+      justify-content: flex-end;
     }
   }
 }
