--- a/src/components/useDragModal/index.less
+++ b/src/components/useDragModal/index.less
@@ -6,15 +6,13 @@
   // font-family: -apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;
 }
 .cv-modal {
-  width: calc(100vw);
-  height: calc(100vh);
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 2000;
-  height: 100%;
-  width: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
   .cv-drag-modal {
     background-color: #fff;
     border-radius: 2px;
@@ -33,6 +31,7 @@
       font-size: 24px;
       transition: 0.3s;
       cursor: pointer;
+      line-height: 1;
       &:hover {
         color: rgba(0, 0, 0, 0.25);
       }
@@ -44,6 +43,7 @@
       letter-spacing: 2px;
       padding: 12px 8px;
       border-bottom: 1px solid #f0f0f0;
+      text-align: left;
     }
     .cv-drag-modal-body {
       padding: 8px;
