--- a/lib/components/useDragModal/index.less
+++ b/lib/components/useDragModal/index.less
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-size: 14px;
+  // font-size: 14px;
   // font-family: -apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;
 }
 .cv-modal {
