--- a/src/components/CoverTable/index.less
+++ b/src/components/CoverTable/index.less
@@ -12,6 +12,21 @@
   }
   // 分页样式
   .ant-table-pagination.ant-pagination {
-    margin: 8px 0px;
+    margin: 4px 0px;
   }
+
+  // 调整宽度表格样式
+  .react-resizable {
+    position: relative;
+    background-clip: padding-box;
+  }
+  .react-resizable-handle {
+    position: absolute;
+    width: 10px;
+    height: 100%;
+    bottom: 0;
+    right: -5px;
+    cursor: col-resize;
+    z-index: 1;
+  }  
 }
